feat: add Get and Set command